removed margin 165px

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -16,7 +16,6 @@
             <svg class="header__logo logo">
                 <use xlink:href="sprite.svg#logo"></use>
             </svg>
-            </div>
             <nav class="header__menu">
                 <a class="menu__link" href="#">Design Gallery</a>
                 <a class="menu__link" href="#">List of Architect</a>
@@ -48,15 +47,13 @@
             </h1>
             <div class="dreamhouse__container">
                 <div class="dreamhouse__aside">
-                    <div class="dreamhouse__text">
-                        <p class="p__line-height">The first and most trusted marketplace
-                            <br>
-                            of design & build house in the World.<br>
-                            100% guaranted Build safe,<br>
-                            comfortable and transparate with a<br>
-                            project management for the best result
-                        </p>
-                    </div>
+                    <p class="dreamhouse__text">The first and most trusted marketplace
+                        <br>
+                        of design & build house in the World.<br>
+                        100% guaranted Build safe,<br>
+                        comfortable and transparate with a<br>
+                        project management for the best result
+                    </p>
                     <button type="button" class="dreamhouse__button button button--primary">Free Consultation</button>
                 </div>
                 <div class="dreamhouse__photo-container image" data-image-in>
@@ -93,7 +90,7 @@
             </div>
         </div>
         <div class="archmove">
-            <h2 class="archmove__title">Build your needs
+            <h2 class="archmove__title--h2">Build your needs
                 <br>with Archmove
             </h2>
             <div class="archmove__container">
@@ -109,9 +106,7 @@
                             <use xlink:href="sprite.svg#bird"></use>
                         </svg>
                         <div class="archmove__text">
-                            <h4>
-                                <b>100% guaranted project completion</b>
-                            </h4>
+                            <h4 class="archmove__title--h4">100% guaranted project completion</h4>
                             <p class="p__line-height">Build safe, comfortable and transparent
                                 <br>
                                 with a project management applacation<br>
@@ -124,9 +119,7 @@
                             <use xlink:href="sprite.svg#dollar"></use>
                         </svg>
                         <div class="archmove__text">
-                            <h4>
-                                <b>No additional fees</b>
-                            </h4>
+                            <h4 class="archmove__title--h4">No additional fees</h4>
                             <p class="p__line-height">There are no hidden costs. The value of
                                 <br>the offer you get is the value you paid
                             </p>
@@ -137,9 +130,7 @@
                             <use xlink:href="sprite.svg#circle"></use>
                         </svg>
                         <div class="archmove__text">
-                            <h4>
-                                <b>Get escort from the Team</b>
-                            </h4>
+                            <h4 class="archmove__title--h4">Get escort from the Team</h4>
                             <p class="p__line-height">Monitor reports from Arsitag team
                                 <br>who check directly in the field
                             </p>
