changed colours variables

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -107,7 +107,7 @@
                         </svg>
                         <div class="archmove__text">
                             <h4 class="archmove__title--h4">100% guaranted project completion</h4>
-                            <p class="p__line-height">Build safe, comfortable and transparent
+                            <p class="line-spacing--lg">Build safe, comfortable and transparent
                                 <br>
                                 with a project management applacation<br>
                                 with a joint account
@@ -120,7 +120,7 @@
                         </svg>
                         <div class="archmove__text">
                             <h4 class="archmove__title--h4">No additional fees</h4>
-                            <p class="p__line-height">There are no hidden costs. The value of
+                            <p class="line-spacing--lg">There are no hidden costs. The value of
                                 <br>the offer you get is the value you paid
                             </p>
                         </div>
@@ -131,7 +131,7 @@
                         </svg>
                         <div class="archmove__text">
                             <h4 class="archmove__title--h4">Get escort from the Team</h4>
-                            <p class="p__line-height">Monitor reports from Arsitag team
+                            <p class="line-spacing--lg">Monitor reports from Arsitag team
                                 <br>who check directly in the field
                             </p>
                         </div>
