changed back to top button (color&size)

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -36,8 +36,8 @@
             </div>
         </header>
         <button type="button" class="button__back-to-top--hidden button__back-to-top--active" data-back-to-top>
-            <svg width="30" height="30">
-                <use xlink:href="sprite.svg#button-up"></use>
+            <svg width="60" height="60" class="back-to-top__icon">
+                <use xlink:href="sprite.svg#button-back-to-top"></use>
             </svg>
         </button>
         <div class="dreamhouse">
