changed animation way

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -16,7 +16,7 @@
             <svg class="header__logo logo">
                 <use xlink:href="sprite.svg#logo"></use>
             </svg>
-            <nav class="header__menu">
+            <nav>
                 <a class="menu__link" href="#">Design Gallery</a>
                 <a class="menu__link" href="#">List of Architect</a>
                 <a class="menu__link" href="#">Articles</a>
