fixed some mistakes of mobile version

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -13,10 +13,10 @@
     </head>
     <body>
         <header class="header__content">
-            <svg class="header__logo logo">
+            <svg class="logo">
                 <use xlink:href="sprite.svg#logo"></use>
             </svg>
-            <nav>
+            <nav class="header__menu">
                 <a class="menu__link" href="#">Design Gallery</a>
                 <a class="menu__link" href="#">List of Architect</a>
                 <a class="menu__link" href="#">Articles</a>
@@ -160,7 +160,7 @@
                 </div>
             </div>
             <div class="footer">
-                <nav>
+                <nav class="footer__menu">
                     <a href="#" class="menu__link">
                         <b>About Us</b>
                     </a>
