added burger in mobile

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -16,7 +16,7 @@
             <svg class="logo">
                 <use xlink:href="sprite.svg#logo"></use>
             </svg>
-            <svg class="burger" data-burger>
+            <svg class="header__burger burger-icon" data-burger>
                 <use xlink:href="sprite.svg#burger"></use>
             </svg>
             <nav class="header__menu" data-header-menu>
@@ -170,7 +170,10 @@
                 </div>
             </div>
             <div class="footer">
-                <nav class="footer__menu">
+                <svg class="footer__burger burger-icon" data-burger>
+                    <use xlink:href="sprite.svg#burger"></use>
+                </svg>
+                <nav class="footer__menu" data-footer-menu>
                     <a href="#" class="menu__link">
                         <b>About Us</b>
                     </a>
