--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -98,7 +98,7 @@
             </div>
         </div>
         <div class="archmove">
-            <h2 class="archmove__title--h2">Build your needs
+            <h2 class="archmove__main-title">Build your needs
                 <br>with Archmove
             </h2>
             <div class="archmove__container">
@@ -115,7 +115,7 @@
                             <use xlink:href="sprite.svg#bird"></use>
                         </svg>
                         <div class="archmove__text">
-                            <h4 class="archmove__title--h4">100% guaranted project completion</h4>
+                            <h3 class="archmove__title">100% guaranted project completion</h3>
                             <p class="line-spacing--lg">Build safe, comfortable and transparent
                                 <br>
                                 with a project management applacation<br>
@@ -128,7 +128,7 @@
                             <use xlink:href="sprite.svg#dollar"></use>
                         </svg>
                         <div class="archmove__text">
-                            <h4 class="archmove__title--h4">No additional fees</h4>
+                            <h3 class="archmove__title">No additional fees</h3>
                             <p class="line-spacing--lg">There are no hidden costs. The value of
                                 <br>the offer you get is the value you paid
                             </p>
@@ -139,7 +139,7 @@
                             <use xlink:href="sprite.svg#circle"></use>
                         </svg>
                         <div class="archmove__text">
-                            <h4 class="archmove__title--h4">Get escort from the Team</h4>
+                            <h3 class="archmove__title">Get escort from the Team</h3>
                             <p class="line-spacing--lg">Monitor reports from Arsitag team
                                 <br>who check directly in the field
                             </p>
