added class hidden

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -30,15 +30,15 @@
                     <svg data-halfmoon class="themes-toggle__button--halfmoon">
                         <use xlink:href="sprite.svg#halfmoon"></use>
                     </svg>
-                    <svg data-sun class="themes-toggle__button--sun themes-toggle__button--hidden">
+                    <svg data-sun class="themes-toggle__button--sun hidden">
                         <use xlink:href="sprite.svg#sun"></use>
                     </svg>
                 </div>
-                <button type="button" class="button__sign-in button button--secondary">Sign In</button>
-                <button type="button" class="button__sign-up button button--primary">Sign Up</button>
+                <button type="button" class="button button--secondary">Sign In</button>
+                <button type="button" class="button button--primary">Sign Up</button>
             </div>
         </header>
-        <button type="button" class="back-to-top--hidden back-to-top" data-back-to-top>
+        <button type="button" class="hidden" data-back-to-top>
             <svg class="back-to-top__icon">
                 <use xlink:href="sprite.svg#button-back-to-top"></use>
             </svg>
@@ -81,28 +81,28 @@
                 <picture>
                     <source srcset="4x/kitchen.jpg 4x" media="(min-width: 2000px)" width="450px">
                     <source srcset="2x/kitchen.jpg 2x" media="(min-width: 1020px)" width="225px">
-                    <source srcset="2x/kitchen.jpg 2x" media="(min-width: 760px)" width="350px">
+                    <source class="design__photo" srcset="2x/kitchen.jpg 2x" media="(min-width: 760px)" width="300px">
                     <source srcset="2x/kitchen.jpg 2x">
                     <img src="1x/kitchen.jpg" alt="kitchen">
                 </picture>
                 <picture>
                     <source srcset="4x/gasstove.jpg 4x" media="(min-width: 2000px)" width="450px">
                     <source srcset="2x/gasstove.jpg 2x" media="(min-width: 1020px)" width="225px">
-                    <source srcset="2x/gasstove.jpg 2x" media="(min-width: 760px)" width="350px">
+                    <source class="design__photo" srcset="2x/gasstove.jpg 2x" media="(min-width: 760px)" width="300px">
                     <source srcset="2x/gasstove.jpg 2x">
                     <img src="1x/gasstove.jpg" alt="gasstove">
                 </picture>
                 <picture>
                     <source srcset="4x/bedroom.jpg 4x" media="(min-width: 2000px)" width="450px">
                     <source srcset="2x/bedroom.jpg 2x" media="(min-width: 1020px)" width="225px">
-                    <source srcset="2x/bedroom.jpg 2x" media="(min-width: 760px)" width="350px">
+                    <source class="design__photo" srcset="2x/bedroom.jpg 2x" media="(min-width: 760px)" width="300px">
                     <source srcset="2x/bedroom.jpg 2x">
                     <img src="1x/bedroom.jpg" alt="bedroom">
                 </picture>
                 <picture>
                     <source srcset="4x/diningroom.jpg 4x" media="(min-width: 2000px)" width="450px">
                     <source srcset="2x/diningroom.jpg 2x" media="(min-width: 1020px)" width="225px">
-                    <source srcset="2x/diningroom.jpg 2x" media="(min-width: 760px)" width="350px">
+                    <source class="design__photo" srcset="2x/diningroom.jpg 2x" media="(min-width: 760px)" width="300px">
                     <source srcset="2x/diningroom.jpg 2x">
                     <img src="1x/diningroom.jpg" alt="diningroom">
                 </picture>
