added footer in 2 columns, remade toogle of back=to=top, remade display of archmove title

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -38,7 +38,7 @@
                 <button type="button" class="button button--primary">Sign Up</button>
             </div>
         </header>
-        <button type="button" class="hidden" data-back-to-top>
+        <button type="button" class="back-to-top hidden" data-back-to-top>
             <svg class="back-to-top__icon">
                 <use xlink:href="sprite.svg#button-back-to-top"></use>
             </svg>
