added grid, fixet footer in iPgone4 and burger in tablet

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -43,15 +43,15 @@
                 <use xlink:href="sprite.svg#button-back-to-top"></use>
             </svg>
         </button>
-        <div class="dreamhouse">
-            <div class="dreamhouse__title-container">
+        <div class="dreamhouse container">
+            <div class="dreamhouse__title-container row__column">
                 <h1 class="dreamhouse__title">
                     Build Your<br>
                     Dream <span class="text--accent">House</span>
                 </h1>
             </div>
-            <div class="dreamhouse__container">
-                <div class="dreamhouse__aside">
+            <div class="dreamhouse__container row">
+                <div class="dreamhouse__aside row__column--4 row__column">
                     <p class="dreamhouse__text">The first and most trusted marketplace
                         <br>
                         of design & build house in the World.<br>
@@ -61,7 +61,7 @@
                     </p>
                     <button type="button" class="dreamhouse__button button button--primary">Free Consultation</button>
                 </div>
-                <div class="dreamhouse__photo-container image" data-image-in>
+                <div class="dreamhouse__photo-container image row__column row__column--8" data-image-in>
                     <picture>
                         <source srcset="4x/computers.jpg 4x" media="(min-width: 2000px)" width="1200px">
                         <source srcset="2x/computers.jpg 2x" media="(max-width: 1025px)" width="550px">
@@ -108,12 +108,12 @@
                 </picture>
             </div>
         </div>
-        <div class="archmove">
-            <h2 class="archmove__main-title">Build your needs
+        <div class="archmove container">
+            <h2 class="archmove__main-title row__column">Build your needs
                 <br>with Archmove
             </h2>
-            <div class="archmove__container">
-                <div class="archmove__photo-container image" data-image-in>
+            <div class="archmove__container row__column">
+                <div class="archmove__photo-container image row__column--7" data-image-in>
                     <picture>
                         <source srcset="4x/meeting.jpg 4x" media="(min-width: 2000px)" width="900px">
                         <source srcset="2x/meeting.jpg 2x" media="(max-width: 1025px)" width="450px">
@@ -121,7 +121,7 @@
                         <img src="1x/meeting.jpg" alt="meeting">
                     </picture>
                 </div>
-                <div class="archmove__content">
+                <div class="archmove__content row__column--5">
                     <div class="archmove__block--bird">
                         <svg class="archmove__icon archmove__icon--bird">
                             <use xlink:href="sprite.svg#bird"></use>
@@ -161,16 +161,16 @@
                 </div>
             </div>
         </div>
-        <div class="dream-project">
+        <div class="dream-project container">
             <div class="dream-project__container">
-                <div class="dream-project__photo-container">
+                <div class="dream-project__photo-container row__column--6 row__column">
                     <picture>
                         <source srcset="4x/house.png 4x" media="(min-width: 2000px)" width="900px">
                         <source srcset="2x/house.png 2x">
                         <img src="1x/house.png" alt="house">
                     </picture>
                 </div>
-                <div class="dream-project__content">
+                <div class="dream-project__content row__column--6 row__column">
                     <div class="dream-project__text">
                         <p>
                             Realize your dream<br>
